# NeurIPS-MMU-RAG

./: .gitignore  Dockerfile  README.md  main.py  plot_comparison.py  pyproject.toml  runpod_handler.py  test_async_reranker.py  test_reranker_implementation.py
.github/workflows/: README.md  build-and-push-ecr.yml
cloud/ec2_profiles/: ec2_bedrock.yaml
cloud/lite_server/: docker-compose.yaml
cloud/openai_server/: docker-compose.yaml
cloud/rag_server_proxy/: ec2-management-role.yaml
data/: test_contexts_n2.jsonl
data/evaluation_results/: benchmark_decomposition_rag.aggregated.jsonl  benchmark_decomposition_rag.rows.jsonl  benchmark_mmu_rag_router_llm.aggregated.jsonl  benchmark_mmu_rag_router_llm.rows.jsonl  benchmark_mmu_rag_vanilla.aggregated.jsonl  benchmark_mmu_rag_vanilla.rows.jsonl  benchmark_mmu_vanilla_agent.aggregated.jsonl  benchmark_mmu_vanilla_agent.rows.jsonl  deepresearch_combined_all.rows.jsonl  deepresearch_combined_contexts.aggregated.jsonl  deepresearch_combined_contexts.rows.jsonl  deepresearch_parallel.aggregated.jsonl  deepresearch_parallel.rows.jsonl  llm_eval_test.aggregated.jsonl  llm_eval_test.rows.jsonl  manual_feedbacks_activity_day.csv  manual_feedbacks_clean.csv  output_t2t_val_n2.eval10070146.DeepEvalEvaluator.aggregated.jsonl  output_t2t_val_n2.eval10070146.DeepEvalEvaluator.rows.jsonl  t2t_decomposition_rag.aggregated.jsonl  t2t_decomposition_rag.rows.jsonl  t2t_mmu_rag_router_llm.aggregated.jsonl  t2t_mmu_rag_router_llm.rows.jsonl  t2t_mmu_rag_vanilla.aggregated.jsonl  t2t_mmu_rag_vanilla.rows.jsonl  t2t_mmu_vanilla_agent.aggregated.jsonl  t2t_mmu_vanilla_agent.rows.jsonl  t2t_vanilla_agent.aggregated.jsonl  test_vanila_rag_claude_sonnet_4.DeepEvalEvaluator.aggregated.jsonl  test_vanila_rag_claude_sonnet_4.DeepEvalEvaluator.rows.jsonl  test_vanila_rag_claude_sonnet_4.LLMEvaluator.aggregated.jsonl  test_vanila_rag_claude_sonnet_4.LLMEvaluator.rows.jsonl  test_vanila_rag_gpt_oss_120b.DeepEvalEvaluator.aggregated.jsonl  test_vanila_rag_gpt_oss_120b.DeepEvalEvaluator.rows.jsonl  test_vanila_rag_gpt_oss_120b.LLMEvaluator.aggregated.jsonl  test_vanila_rag_gpt_oss_120b.LLMEvaluator.rows.jsonl  test_vanila_rag_gpt_oss_20b.DeepEvalEvaluator.aggregated.jsonl  test_vanila_rag_gpt_oss_20b.DeepEvalEvaluator.rows.jsonl  test_vanila_rag_gpt_oss_20b.LLMEvaluator.aggregated.jsonl  test_vanila_rag_gpt_oss_20b.LLMEvaluator.rows.jsonl  (+6 more)
data/past_topics/: convert_topics.py  create_evaluation_set.py
data/past_topics/commercial_outputs/: IKAT_n5_examples.jsonl  IKAT_processed_n99_sample_response.jsonl  LiveRAG.n50.jsonl  output_IKAT_n5.jsonl  output_IKAT_processed_query_qwen4b.jsonl  output_sachin-test-collection-queries.jsonl  output_trec_rag_2025_queries.jsonl  output_trec_rag_2025_queries.n50.jsonl  sample.jsonl  t2t_plex_results.json  topics.rag24.test.n50.jsonl  trec_rag_2025_queries.n50.jsonl
data/past_topics/gold_outputs/: output_remote_mmu_vanilla_agent_sonnet_benchmark_topics.jsonl
data/sample-test-col-queries/: samples.csv  samples_with_labels.csv
data/self-donated-topics/: shuoqi_self-donated_qa.jsonl
logs/api_responses/: openai_o3_research_community.json  openai_o3_research_community.md  perplexity-research-community-response.json  perplexity-research-community-response.md  perplexity-sonar-pro-community.json
models/: qdecompose_model.joblib
results/: output_t2t_val_n10.jsonl  output_t2t_val_n2.jsonl  ragas_relevancy_fallback.json
scripts/: evaluate.py  proxy.py  run.py  run_datasets.sh  run_remote.py  run_retrieval.py  test_reranker_vllm.py
scripts/add_qa_entry/: README.md
scripts/notebooks/: feedbacks_analysis.txt
src/: cleaner.py  loader.py  pipeline.py
src/apis/: README.md  combined_app.py  lite_router.py  mmu_rag_router.py  openai_router.py  runpod_handler.py  warmup.py
src/evaluators/: README.md  __init__.py
src/systems/: rag_interface.py
src/systems/GRAG/: grag.py  (+1 more)
src/tools/: aws_tools.py  chunker.py  doc_truncation.py  docs_utils.py  generator.py  indexer.py  llm_server.py  path_utils.py  pipeline.py  reranker_vllm.py  retriever.py  str_utils.py  tokenizer.py  web_search.py
(+71 files in other folders)
