[project]
name = "mmu-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "datasets>=4.1.0",
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.1",
    "jsonlines>=4.0.0",
    "langchain-openai>=0.3.29",
    "litellm>=1.75.3",
    "nltk>=3.9.1",
    "openai>=1.99.1",
    "pandas>=2.3.2",
    "posthog>=6.7.5",
    "pydantic>=2.11.7",
    "ragas>=0.3.5",
    "rouge-score>=0.1.2",
    "structlog>=25.4.0",
    "tiktoken>=0.8.0",
    "transformers>=4.56.1",
]

[project.optional-dependencies]
# uv add torch --optional sglang
# uv sync --extra sglang
# or | uv sync --all-extras
sglang = ["sglang[all]>=0.5.3rc0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["autopep8>=2.3.2"]
